--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,7 +21,7 @@ services:
       APP_USER: ${APP_USER:-laravel}
       SWOOLE_MAX_REQUESTS: 1000
       SWOOLE_TASK_WORKERS: 'auto'
-      SWOOLE_WATCH: false
+      SWOOLE_WATCH: 'false'
       SWOOLE_WORKERS: 'auto'
       SWOOLE_PORT: ${SWOOLE_PORT:-8000}
       XDEBUG_MODE: 'off'
@@ -34,8 +34,6 @@ services:
     depends_on:
       - redis
       - websocket
-    ports:
-      - ${SWOOLE_PORT:-8000}:${SWOOLE_PORT:-8000}
 
   websocket:
     image: xoren-io-websocket
