updated production vars

--- a/.env.production
+++ b/.env.production
@@ -9,8 +9,8 @@ APP_URL=http://localhost
 
 # Docker settings
 
-APP_USER_UUID=1000
-APP_USER=laravel
+APP_USER_UUID=987
+APP_USER=xorenioapi
 
 APP_TIMEZONE=Europe/London
 APP_ENCODE=en_GB
