Added ssl for local dev and added in deployment script also small changes for deployment

--- a/nginx/conf.d/api.conf
+++ b/nginx/conf.d/api.conf
@@ -37,16 +37,16 @@ server {
     error_log  /var/log/nginx/error.log error;
     error_page 404 /index.php;
 
-    #include /etc/nginx/snippets/common.conf;
+    include /etc/nginx/snippets/common.conf;
 
     ## Block the robots
-    #if ($blocked_bots = 1) {
-    #        return 444;
-    #}
+    if ($blocked_bots = 1) {
+            return 444;
+    }
 
-    #if ($scanners = 1) {
-    #        return 444;
-    #}
+    if ($scanners = 1) {
+            return 444;
+    }
 
 
     include /etc/nginx/snippets/locations.conf;
@@ -55,27 +55,27 @@ server {
 
 
 
-#server {
-    #listen 443 ssl; # Listen for ssl connections on port 443
-    #server_name _ localhost;  # Catch all domains including localhost
-    #root /var/www/public;  # Root directory for the server
+server {
+    listen 443 ssl; # Listen for ssl connections on port 443
+    server_name _ localhost;  # Catch all domains including localhost
+    root /var/www/public;  # Root directory for the server
 
     # Server logs
-    #access_log off;
-    #error_log  /var/log/nginx/ssl_error.log;
+    access_log off;
+    error_log  /var/log/nginx/ssl_error.log;
 
     # Include common configs and ssl
-    #include /etc/nginx/snippets/common.conf;
-    #include /etc/nginx/snippets/ssl.conf;
+    include /etc/nginx/snippets/common.conf;
+    include /etc/nginx/snippets/ssl.conf;
 
     ## Block the robots
-    #if ($blocked_bots = 1) {
-    #        return 444;
-    #}
+    if ($blocked_bots = 1) {
+            return 444;
+    }
 
-    #if ($scanners = 1) {
-    #        return 444;
-    #}
+    if ($scanners = 1) {
+            return 444;
+    }
 
-    #include /etc/nginx/snippets/locations.conf;
-#}
+    include /etc/nginx/snippets/locations.conf;
+}
