--- a/.env.production
+++ b/.env.production
@@ -1,10 +1,16 @@
+# Deployment
+
+APP_VERSION=<APP_VERSION>
+APP_UPDATED_AT=<APP_UPDATED_AT>
+
+
 # Laravel settings
 
 APP_NAME=Laravel
 APP_ENV=production
 APP_KEY=<APP_KEY>
-APP_DEBUG=true
-APP_URL=http://localhost
+APP_DEBUG=false
+APP_URL=http://api.xoren.io
 
 
 # Docker settings
@@ -26,11 +32,11 @@ LOG_LEVEL=debug
 # Laravel & Docker settings
 
 DB_CONNECTION=mysql
-DB_HOST=mysql
+DB_HOST=<DB_HOST>
 DB_PORT=3306
-DB_DATABASE=laravel
-DB_USERNAME=laravel
-DB_PASSWORD=password
+DB_DATABASE=<DB_DATABASE>
+DB_USERNAME=<DB_USERNAME>
+DB_PASSWORD=<DB_PASSWORD>
 
 
 # Laravel settings
