Added in moving laravel storage folder in to deployment

--- a/nginx/snippets/locations.conf
+++ b/nginx/snippets/locations.conf
@@ -44,7 +44,7 @@ location / {
 #}
 
 location /storage {
-    autoindex on;
+    autoindex off;
     add_header 'Access-Control-Allow-Origin' '*';
     root /var/www/storage/app/public;
 }
