--- a/.env.production
+++ b/.env.production
@@ -1,22 +1,22 @@
 # Deployment
 
-APP_VERSION=<APP_VERSION>
-APP_UPDATED_AT=<APP_UPDATED_AT>
+APP_VERSION="<APP_VERSION>"
+APP_UPDATED_AT="<APP_UPDATED_AT>"
 
 
 # Laravel settings
 
-APP_NAME=Laravel
+APP_NAME=XOREN.IO
 APP_ENV=production
-APP_KEY=<APP_KEY>
+APP_KEY="<APP_KEY>"
 APP_DEBUG=false
-APP_URL=http://api.xoren.io
+APP_URL=https://api.xoren.io
 
 
 # Docker settings
 
-APP_USER_UUID=987
-APP_USER=xorenioapi
+APP_USER_UUID="<APP_USER_UUID>"
+APP_USER="<APP_USER>"
 
 APP_TIMEZONE=Europe/London
 APP_ENCODE=en_GB
@@ -32,11 +32,11 @@ LOG_LEVEL=debug
 # Laravel & Docker settings
 
 DB_CONNECTION=mysql
-DB_HOST=<DB_HOST>
+DB_HOST="<DB_HOST>"
 DB_PORT=3306
-DB_DATABASE=<DB_DATABASE>
-DB_USERNAME=<DB_USERNAME>
-DB_PASSWORD=<DB_PASSWORD>
+DB_DATABASE="<DB_DATABASE>"
+DB_USERNAME="<DB_USERNAME>"
+DB_PASSWORD="<DB_PASSWORD>"
 
 
 # Laravel settings
@@ -46,20 +46,20 @@ CACHE_DRIVER=redis
 FILESYSTEM_DISK=local
 QUEUE_CONNECTION=redis
 SESSION_DRIVER=cookie
-SESSION_LIFETIME=120
+SESSION_LIFETIME=2440
 SANCTUM_STATEFUL_DOMAINS=.xoren.io:443
 
 REDIS_HOST=redis
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
-MAIL_MAILER=smtp
-MAIL_HOST=mailpit
-MAIL_PORT=1025
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS="hello@example.com"
+MAIL_MAILER="<MAIL_MAILER>"
+MAIL_HOST="<MAIL_HOST>"
+MAIL_PORT="<MAIL_PORT>"
+MAIL_USERNAME="<MAIL_USERNAME>"
+MAIL_PASSWORD="<MAIL_PASSWORD>"
+MAIL_ENCRYPTION="<MAIL_ENCRYPTION>"
+MAIL_FROM_ADDRESS="<MAIL_FROM_ADDRESS>"
 MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
