Set xoren.io email address for Received email from /contact

--- a/.env.production
+++ b/.env.production
@@ -60,6 +60,7 @@ MAIL_USERNAME="<MAIL_USERNAME>"
 MAIL_PASSWORD="<MAIL_PASSWORD>"
 MAIL_ENCRYPTION="<MAIL_ENCRYPTION>"
 MAIL_FROM_ADDRESS="<MAIL_FROM_ADDRESS>"
+MAIL_TO_ADDRESS="<MAIL_TO_ADDRESS>"
 MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
