--- a/.env.local
+++ b/.env.local
@@ -1,6 +1,6 @@
 # Laravel settings
 
-APP_NAME=Laravel
+APP_NAME=XOREN.IO
 APP_ENV=local
 APP_KEY=base64:vjIZz6NYrxzO2Yq0scl+WtSQyssy5SGTC8w3ub+9RTc=
 APP_DEBUG=true
@@ -56,6 +56,7 @@ MAIL_USERNAME=null
 MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
 MAIL_FROM_ADDRESS="hello@example.com"
+MAIL_TO_ADDRESS="me@xoren.io"
 MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
