fixed var compare statment in deployment.sh

--- a/.env.production
+++ b/.env.production
@@ -1,6 +1,6 @@
 # Deployment
 
-APP_VERSION="<APP_VERSION>"
+APP_VERSION='"<APP_VERSION>"'
 APP_UPDATED_AT="<APP_UPDATED_AT>"
 
 
@@ -60,8 +60,8 @@ MAIL_USERNAME="<MAIL_USERNAME>"
 MAIL_PASSWORD="<MAIL_PASSWORD>"
 MAIL_ENCRYPTION="<MAIL_ENCRYPTION>"
 MAIL_FROM_ADDRESS="<MAIL_FROM_ADDRESS>"
-MAIL_TO_ADDRESS="<MAIL_TO_ADDRESS>"
 MAIL_FROM_NAME="${APP_NAME}"
+MAIL_TO_ADDRESS="<MAIL_TO_ADDRESS>"
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
