--- a/.env.local
+++ b/.env.local
@@ -41,6 +41,7 @@ FILESYSTEM_DISK=local
 QUEUE_CONNECTION=redis
 SESSION_DRIVER=cookie
 SESSION_LIFETIME=120
+SESSION_SECURE_COOKIE=false
 SANCTUM_STATEFUL_DOMAINS=localhost,::1,127.0.0.1,localhost:3000,127.0.0.1:3000,::1:3000
 
 MEMCACHED_HOST=127.0.0.1
@@ -56,8 +57,8 @@ MAIL_USERNAME=null
 MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
 MAIL_FROM_ADDRESS="hello@example.com"
-MAIL_TO_ADDRESS="me@xoren.io"
 MAIL_FROM_NAME="${APP_NAME}"
+MAIL_TO_ADDRESS="me@xoren.io"
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
