--- a/laravel/supervisord/production.conf
+++ b/laravel/supervisord/production.conf
@@ -25,7 +25,7 @@ minprocs = 100
 
 [program:laravel]
 user = laravel
-command = /usr/local/bin/php -d variables_order=EGPCS /var/www/artisan octane:start --server=swoole --host=0.0.0.0 --port=${SWOOLE_PORT:-8000} --workers=${SWOOLE_WORKERS:-auto} --task-workers=${SWOOLE_TASK_WORKERS:-auto} --max-requests=${SWOOLE_MAX_REQUESTS:-500} --watch
+command = /usr/local/bin/php -d variables_order=EGPCS /var/www/artisan octane:start --server=swoole --host=0.0.0.0 --port=8000 --workers=${SWOOLE_WORKERS:-auto} --task-workers=${SWOOLE_TASK_WORKERS:-auto} --max-requests=${SWOOLE_MAX_REQUESTS:-500} --watch
 process_name = %(program_name)s_%(process_num)02d
 numprocs = 1
 priority = 0
