Removed --watch on production from swoole in docker.sh and docker-compose files

--- a/laravel/Dockerfile
+++ b/laravel/Dockerfile
@@ -21,10 +21,10 @@ ENV LANGUAGE ${APP_ENCODE}.UTF-8
 ENV LC_ALL ${APP_ENCODE}.UTF-8
 
 # Swoole Environment variables.
-ENV SWOOLE_MAX_REQUESTS "500"
-ENV SWOOLE_TASK_WORKERS "auto"
-ENV SWOOLE_WATCH $false
-ENV SWOOLE_WORKERS "auto"
+ENV SWOOLE_MAX_REQUESTS ${SWOOLE_MAX_REQUESTS:-500}
+ENV SWOOLE_TASK_WORKERS ${SWOOLE_TASK_WORKERS:-auto}
+ENV SWOOLE_WATCH ${SWOOLE_WATCH:-false}
+ENV SWOOLE_WORKERS ${SWOOLE_WORKERS:-auto}
 ENV SWOOLE_PORT ${SWOOLE_PORT:-9000}
 
 
