--- a/.env.local
+++ b/.env.local
@@ -100,8 +100,8 @@ VITE_PUSHER_PORT="${PUSHER_PORT}"
 VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
-SWOOLE_MAX_REQUESTS=500
+SWOOLE_MAX_REQUESTS=200
 SWOOLE_TASK_WORKERS=auto
-SWOOLE_WATCH=false
+SWOOLE_WATCH=true
 SWOOLE_WORKERS=auto
 SWOOLE_PORT=8000
