--- a/.env.production
+++ b/.env.production
@@ -103,7 +103,7 @@ VITE_PUSHER_PORT="${PUSHER_PORT}"
 VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
-SWOOLE_MAX_REQUESTS=500
+SWOOLE_MAX_REQUESTS=1024
 SWOOLE_TASK_WORKERS=auto
 SWOOLE_WATCH=false
 SWOOLE_WORKERS=auto
