--- a/docker-compose.local.yml
+++ b/docker-compose.local.yml
@@ -19,10 +19,10 @@ services:
       CONTAINER_ROLE: 'laravel'
       APP_ENV: ${APP_ENV:-local}
       APP_USER: ${APP_USER:-laravel}
-      SWOOLE_MAX_REQUESTS: 1000
-      SWOOLE_TASK_WORKERS: 'auto'
-      SWOOLE_WATCH: 'false'
-      SWOOLE_WORKERS: 'auto'
+      SWOOLE_MAX_REQUESTS:  ${SWOOLE_MAX_REQUESTS:-500}
+      SWOOLE_TASK_WORKERS: ${SWOOLE_TASK_WORKERS:-auto}
+      SWOOLE_WATCH: ${SWOOLE_WATCH:-false}
+      SWOOLE_WORKERS: ${SWOOLE_WORKERS:-auto}
       SWOOLE_PORT: ${SWOOLE_PORT:-8000}
       XDEBUG_MODE: 'off'
       XDEBUG_CONFIG: 'client_host=host.docker.internal'
