Updated Deployment script to latest version

--- a/.env.production
+++ b/.env.production
@@ -1,7 +1,10 @@
 # Deployment
 
-APP_VERSION='"<APP_VERSION>"'
-APP_UPDATED_AT="<APP_UPDATED_AT>"
+DEPLOYMENT_VERSION="<DEPLOYMENT_VERSION>"
+DEPLOYMENT_ENV=production
+DEPLOYMENT_TIMEZONE=Europe/London
+DEPLOYMENT_ENCODE=en_GB
+DEPLOYMENT_AT="<DEPLOYMENT_AT>"
 
 
 # Laravel settings
