--- a/.env.local
+++ b/.env.local
@@ -1,3 +1,12 @@
+# Deployment
+
+DEPLOYMENT_VERSION="DEV"
+DEPLOYMENT_ENV=production
+DEPLOYMENT_AT="NOW"
+DEPLOYMENT_TIMEZONE=Europe/London
+DEPLOYMENT_ENCODE=en_GB
+
+
 # Laravel settings
 
 APP_NAME=XOREN.IO
@@ -105,18 +114,3 @@ SWOOLE_TASK_WORKERS=auto
 SWOOLE_WATCH=true
 SWOOLE_WORKERS=auto
 SWOOLE_PORT=8000
-
-
-# Deployment
-
-DEPLOYMENT_VERSION='DEV'
-DEPLOYMENT_ENV=production
-DEPLOYMENT_AT="<DEPLOYMENT_AT>"
-DEPLOYMENT_TIMEZONE=Europe/London
-DEPLOYMENT_ENCODE=en_GB
-
-SSH_PUB_KEY="https://raw.githubusercontent.com/xorenio/ssh/main/id_ed25519_2.pub"
-SSH_BACKUP_PUB_KEY="https://raw.githubusercontent.com/xorenio/ssh/main/id_ed25519.pub"
-
-GIT_EMAIL="john@xoren.io"
-GIT_NAME="John J"
