Removed proxy_next_upstream

--- a/nginx/conf.d/api.conf
+++ b/nginx/conf.d/api.conf
@@ -8,16 +8,16 @@ upstream swoole {
     server laravel:8000;
     server localhost:8000 backup;
 
-    proxy_next_upstream error timeout;
-    proxy_next_upstream_tries 3;
+    #proxy_next_upstream error timeout;
+    #proxy_next_upstream_tries 3;
 }
 
 upstream soketi {
     server websocket:6001;
     server localhost:6001 backup;
 
-    proxy_next_upstream error timeout;
-    proxy_next_upstream_tries 3;
+    #proxy_next_upstream error timeout;
+    #proxy_next_upstream_tries 3;
 }
 
 # Mapping
