Updated nginx setup

--- a/nginx/conf.d/api.conf
+++ b/nginx/conf.d/api.conf
@@ -5,8 +5,8 @@
 
 # Upstream Services
 upstream swoole {
-    server laravel:8000;
-    server localhost:8000 backup;
+    server laravel:9000;
+    server localhost:9000 backup;
 
     #proxy_next_upstream error timeout;
     #proxy_next_upstream_tries 3;
@@ -23,23 +23,20 @@ upstream soketi {
 # Mapping
 map $http_upgrade $backend {
     default http://swoole;
-    websocket http://soketi;
+    websocket "http://soketi";
 }
 
 ## Connection type
-map $http_upgrade:$scheme $connection_upgrade {
-    default upgrade;
-    "websocket:http" ws;
-    "websocket:https" wss;
+map $http_upgrade $type {
+  default "web";
+  websocket "ws";
 }
-
 
 # Server block for HTTP traffic on port 80
 server {
     listen 80;  # Listen for connections on port 80
     server_name _ localhost;  # Catch all domains including localhost
     root /var/www/public;  # Root directory for the server
-
 
     # Server logs
     access_log off;
@@ -57,12 +54,8 @@ server {
             return 444;
     }
 
-
     include /etc/nginx/snippets/locations.conf;
 }
-
-
-
 
 server {
     listen 443 ssl; # Listen for ssl connections on port 443
