--- a/nginx/snippets/locations.conf
+++ b/nginx/snippets/locations.conf
@@ -1,10 +1,10 @@
 
-location = /favicon.ico { access_log off; log_not_found off; }
-location = /robots.txt  { access_log off; log_not_found off; }
+location = /favicon.ico { root /var/www/public; access_log off; log_not_found off; }
+location = /robots.txt  { root /var/www/public; access_log off; log_not_found off; }
 
-location /index.php {
-    try_files /not_exists @octane;
-}
+#location /index.php {
+#    try_files /not_exists @octane;
+#}
 
 #Set request limit to 1 per second on /user/login pages.
 #location /user/login {
@@ -13,7 +13,52 @@ location /index.php {
 #}
 
 # Named location block - used to route WebSocket connections and fall back to php index
+#location / {
+#    set $suffix "";
+#
+#    if ($uri = /index.php) {
+#        set $suffix ?$query_string;
+#    }
+#
+#    add_header 'Access-Control-Allow-Origin' '*';
+#    add_header 'Access-Control-Allow-Methods' 'GET, POST, PATCH, OPTIONS';
+#    add_header 'Access-Control-Allow-Headers' '*';
+#    add_header 'Access-Control-Allow-Credentials' 'true';
+#
+#    proxy_http_version 1.1;
+#    proxy_set_header Host $http_host;
+#    proxy_set_header Scheme $scheme;
+#    proxy_set_header SERVER_PORT $server_port;
+#    proxy_set_header REMOTE_ADDR $remote_addr;
+#    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+#    proxy_set_header Upgrade $http_upgrade;
+#    proxy_set_header Connection $connection_upgrade;
+#    proxy_read_timeout     60;
+#    proxy_connect_timeout  60;
+#
+#    proxy_pass $backend$suffix;
+#}
+
+#location ^~ /.well-known/acme-challenge/ {
+#    proxy_pass http://letsencrypt;
+#}
+
+location /storage {
+    autoindex off;
+    add_header 'Access-Control-Allow-Origin' '*';
+    root /var/www/public;
+}
+
+# Block access to .ht files
+location ~ /\.ht {
+    deny all;
+}
+
 location / {
+    try_files /nonexistent @$type;
+}
+
+location @web {
     set $suffix "";
 
     if ($uri = /index.php) {
@@ -32,24 +77,30 @@ location / {
     proxy_set_header REMOTE_ADDR $remote_addr;
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     proxy_set_header Upgrade $http_upgrade;
-    proxy_set_header Connection $connection_upgrade;
+    proxy_set_header Connection "Upgrade";
     proxy_read_timeout     60;
     proxy_connect_timeout  60;
 
     proxy_pass $backend$suffix;
 }
 
-#location ^~ /.well-known/acme-challenge/ {
-#    proxy_pass http://letsencrypt;
-#}
+location @ws  {
+    charset utf-8;
 
-location /storage {
-    autoindex off;
     add_header 'Access-Control-Allow-Origin' '*';
-    root /var/www/storage/app/public;
-}
+    add_header 'Access-Control-Allow-Methods' 'GET, POST, PATCH, PUT, DELETE, OPTIONS';
+    add_header 'Access-Control-Allow-Headers' '*';
+    add_header 'Access-Control-Allow-Credentials' 'true';
 
-# Block access to .ht files
-location ~ /\.ht {
-        deny all;
+    proxy_pass $backend;
+    proxy_http_version 1.1;
+    proxy_set_header Upgrade $http_upgrade;
+    proxy_set_header Connection "Upgrade";
+    proxy_set_header Host $host;
+    proxy_cache_bypass $http_upgrade;
+    proxy_read_timeout     60;
+    proxy_connect_timeout  60;
+    proxy_redirect         off;
+
+    tcp_nodelay on;
 }
