updated docker and env files

--- a/.env.local
+++ b/.env.local
@@ -6,6 +6,7 @@ DEPLOYMENT_AT="NOW"
 DEPLOYMENT_TIMEZONE=Europe/London
 DEPLOYMENT_ENCODE=en_GB
 
+APP_HOSTNAME="xoren.io"
 
 # Laravel settings
 
@@ -13,13 +14,20 @@ APP_NAME=XOREN.IO
 APP_ENV=local
 APP_KEY=base64:vjIZz6NYrxzO2Yq0scl+WtSQyssy5SGTC8w3ub+9RTc=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL="https://api.${APP_HOSTNAME}"
 
+# Frontend
+
+APP_DESC="XOREN.IO"
+APP_WEB_URL="https://www.${APP_HOSTNAME}:3000"
+APP_API_URL="https://api.${APP_HOSTNAME}"
+APP_AUTHOR="John Jones"
 
 # Docker settings
 
 APP_USER=laravel
 APP_USER_UUID=1000
+APP_USER_GUID=1000
 
 APP_TIMEZONE=Europe/London
 APP_ENCODE=en_GB
@@ -41,6 +49,15 @@ DB_DATABASE=laravel
 DB_USERNAME=laravel
 DB_PASSWORD=password
 
+## Mysql settings
+
+FORWARD_DB_PORT="3306"
+MYSQL_ADMIN_USER="root"
+MYSQL_ROOT_PASSWORD="${DB_PASSWORD}"
+MYSQL_ALLOW_EMPTY_PASSWORD=0
+INIT_ROCKSDB=1
+# INIT_TOKUDB=1 # DEP
+
 
 # Laravel settings
 
@@ -48,60 +65,52 @@ BROADCAST_DRIVER=pusher
 CACHE_DRIVER=redis
 FILESYSTEM_DISK=local
 QUEUE_CONNECTION=redis
-SESSION_DRIVER=cookie
-SESSION_LIFETIME=120
-SESSION_SECURE_COOKIE=false
-SANCTUM_STATEFUL_DOMAINS=localhost,::1,127.0.0.1,localhost:3000,127.0.0.1:3000,::1:3000
-
 MEMCACHED_HOST=127.0.0.1
-
 REDIS_HOST=redis
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
-MAIL_MAILER=smtp
-MAIL_HOST=mailpit
+
+# Session settings
+
+SESSION_DOMAIN=".${APP_HOSTNAME}"
+SESSION_DRIVER=cookie
+SESSION_LIFETIME=2880
+SESSION_SECURE_COOKIE=false
+SESSION_HTTP_ONLY=false
+SESSION_SAME_SITE="lax"
+SANCTUM_STATEFUL_DOMAINS=.${APP_HOSTNAME}:3000,localhost,::1,127.0.0.1,localhost:3000,127.0.0.1:3000,::1:3000
+
+CORS_ALLOW_HEADERS="*"
+CORS_ALLOWHEADERS="*"
+CORS_METHOD="*"
+CORS_ORIGIN="*"
+CORS_CREDENTIALS=true
+CORS_MAX_AGE=0
+
+
+# Mailer settings
+
+MAIL_MAILER=log
+MAIL_HOST=outbound.mailhop.org
 MAIL_PORT=1025
 MAIL_USERNAME=null
 MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
 MAIL_FROM_ADDRESS="hello@example.com"
-MAIL_FROM_NAME="${APP_NAME}"
-MAIL_TO_ADDRESS="me@xoren.io"
+MAIL_FROM_NAME="SEO Tool"
+MAIL_TO_ADDRESS="me@${APP_HOSTNAME}"
 
-AWS_ACCESS_KEY_ID=
-AWS_SECRET_ACCESS_KEY=
-AWS_DEFAULT_REGION=us-east-1
-AWS_BUCKET=
-AWS_USE_PATH_STYLE_ENDPOINT=false
+# Pusher settings
 
 PUSHER_HOST=websocket
 PUSHER_PORT=6001
-PUSHER_SCHEME=https
+PUSHER_SCHEME=http
 
-
-# Laravel & Docker settings
-
-PUSHER_APP_ID=app-key
-PUSHER_APP_KEY=app-id
-PUSHER_APP_SECRET=app-secret
-
-
-# Docker settings
-
-SOKETI_DEBUG=1
-DEFAULT_APP_ENABLE_CLIENT_MESSAGES=true
-DEFAULT_APP_ID="${PUSHER_APP_ID}"
-DEFAULT_APP_KEY="${PUSHER_APP_KEY}"
-DEFAULT_APP_SECRET="${PUSHER_APP_SECRET}"
-CORS_ALLOW_HEADERS="*"
-CORS_ALLOWHEADERS="*"
-CORS_METHOD="*"
-CORS_ORIGIN="*"
-CORS_CREDENTIALS="true"
-
-
-# Laravel settings
+PUSHER_APP_ID=myranking
+PUSHER_APP_KEY=myranking
+PUSHER_APP_SECRET=gQtKJbptcns
+PUSHER_APP_CLUSTER=mt1
 
 VITE_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 VITE_PUSHER_HOST="${PUSHER_HOST}"
@@ -109,8 +118,33 @@ VITE_PUSHER_PORT="${PUSHER_PORT}"
 VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
+
+# Soketi settings
+
+SOKETI_DEBUG=0
+SOKETI_METRICS_ENABLED=true
+METRICS_SERVER_PORT=9601
+DEFAULT_APP_ENABLE_CLIENT_MESSAGES=true
+DEFAULT_APP_ID="${PUSHER_APP_ID}"
+DEFAULT_APP_KEY="${PUSHER_APP_KEY}"
+DEFAULT_APP_SECRET="${PUSHER_APP_SECRET}"
+
+
+# Laravel settings
+
+PHP_PORT=8000
+
+# Cloudflare settings
+
+CF_TOKEN=""
+CF_ACCOUNT_ID=""
+CF_DOMAIN_ID="${APP_HOSTNAME}"
+CF_PROJECT_ID="something"
+
+# Laravel settings
+
 SWOOLE_MAX_REQUESTS=200
 SWOOLE_TASK_WORKERS=auto
 SWOOLE_WATCH=true
 SWOOLE_WORKERS=auto
-SWOOLE_PORT=8000
+SWOOLE_PORT=9000
