--- a/.env.production
+++ b/.env.production
@@ -19,8 +19,10 @@ APP_URL=https://api.xoren.io
 
 APP_USER_UUID="<APP_USER_UUID>"
 APP_USER="<APP_USER>"
+APP_USER_GUID="<APP_USER_GUID>"
 
-APP_TIMEZONE=Europe/London
+TZ=Europe/London
+APP_TIMEZONE="${TZ}"
 APP_ENCODE=en_GB
 
 
@@ -40,20 +42,31 @@ DB_DATABASE="<DB_DATABASE>"
 DB_USERNAME="<DB_USERNAME>"
 DB_PASSWORD="<DB_PASSWORD>"
 
+## Mysql settings
+FORWARD_DB_PORT="<FORWARD_DB_PORT>"
+MYSQL_ADMIN_USER="root"
+MYSQL_ROOT_PASSWORD="password"
+MYSQL_ALLOW_EMPTY_PASSWORD=0
+INIT_ROCKSDB=1
 
-# Laravel settings
+
+# Session settings
 
 BROADCAST_DRIVER=pusher
 CACHE_DRIVER=redis
 FILESYSTEM_DISK=local
 QUEUE_CONNECTION=redis
+#SESSION_DOMAIN=".${APP_HOSTNAME}"
 SESSION_DRIVER=cookie
 SESSION_LIFETIME=2440
-SANCTUM_STATEFUL_DOMAINS=.xoren.io:443
+SANCTUM_STATEFUL_DOMAINS=.${APP_HOSTNAME}:443,.pages.dev:443
 
 REDIS_HOST=redis
 REDIS_PASSWORD=null
 REDIS_PORT=6379
+
+
+# Mailer settings
 
 MAIL_MAILER="<MAIL_MAILER>"
 MAIL_HOST="<MAIL_HOST>"
@@ -62,7 +75,7 @@ MAIL_USERNAME="<MAIL_USERNAME>"
 MAIL_PASSWORD="<MAIL_PASSWORD>"
 MAIL_ENCRYPTION="<MAIL_ENCRYPTION>"
 MAIL_FROM_ADDRESS="<MAIL_FROM_ADDRESS>"
-MAIL_FROM_NAME="${APP_NAME}"
+MAIL_FROM_NAME="SEO Tool"
 MAIL_TO_ADDRESS="<MAIL_TO_ADDRESS>"
 
 AWS_ACCESS_KEY_ID=
@@ -73,19 +86,22 @@ AWS_USE_PATH_STYLE_ENDPOINT=false
 
 PUSHER_HOST=websocket
 PUSHER_PORT=6001
-PUSHER_SCHEME=https
+PUSHER_SCHEME=http
 
 
-# Laravel & Docker settings
+# Pusher settings
 
-PUSHER_APP_ID=app-key
-PUSHER_APP_KEY=app-id
-PUSHER_APP_SECRET=app-secret
+PUSHER_APP_ID="<PUSHER_APP_ID>"
+PUSHER_APP_KEY="<PUSHER_APP_KEY>"
+PUSHER_APP_SECRET="<PUSHER_APP_SECRET>"
+PUSHER_APP_CLUSTER=mt1
 
 
 # Docker settings
 
-SOKETI_DEBUG=1
+SOKETI_DEBUG=0
+SOKETI_METRICS_ENABLED=false
+METRICS_SERVER_PORT=9601
 DEFAULT_APP_ENABLE_CLIENT_MESSAGES=true
 DEFAULT_APP_ID="${PUSHER_APP_ID}"
 DEFAULT_APP_KEY="${PUSHER_APP_KEY}"
@@ -96,7 +112,6 @@ CORS_METHOD="*"
 CORS_ORIGIN="*"
 CORS_CREDENTIALS="true"
 
-
 # Laravel settings
 
 VITE_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
@@ -105,8 +120,17 @@ VITE_PUSHER_PORT="${PUSHER_PORT}"
 VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
-SWOOLE_MAX_REQUESTS=1024
+# Cloudflare settings
+
+CF_TOKEN=""
+CF_ACCOUNT_ID=""
+CF_DOMAIN_ID="${APP_HOSTNAME}"
+CF_PROJECT_ID="something"
+
+# Laravel settings
+
+SWOOLE_MAX_REQUESTS=200
 SWOOLE_TASK_WORKERS=auto
-SWOOLE_WATCH=false
+SWOOLE_WATCH=true
 SWOOLE_WORKERS=auto
-SWOOLE_PORT=8000
+SWOOLE_PORT=9000
