--- a/docker-compose.local.yml
+++ b/docker-compose.local.yml
@@ -8,17 +8,20 @@ services:
       context: .
       dockerfile: ./laravel/Dockerfile
       args:
-        APP_ENV: ${APP_ENV:-local}
-        APP_USER: ${APP_USER:-laravel}
+        APP_ENV: "${APP_ENV:-local}"
+        APP_USER: "${APP_USER:-laravel}"
         APP_USER_UUID: ${APP_USER_UUID:-1000}
-        APP_TIMEZONE: ${APP_TIMEZONE:-Europe/London}
-        APP_ENCODE: ${APP_ENCODE:-en_GB}
+        APP_USER_GUID: ${APP_USER_GUID:-1000}
+        TZ: "${APP_TIMEZONE:-Europe/London}"
+        LANG: "${APP_ENCODE:-en_GB}"
     working_dir: /var/www
     env_file: ./.env
     environment:
-      CONTAINER_ROLE: 'laravel'
-      APP_ENV: ${APP_ENV:-local}
-      APP_USER: ${APP_USER:-laravel}
+      CONTAINER_ROLE: "laravel"
+      APP_ENV: "${APP_ENV:-local}"
+      APP_USER: "${APP_USER:-laravel}"
+      APP_USER_UUID: ${APP_USER_UUID:-1000}
+      APP_USER_GUID: ${APP_USER_GUID:-1000}
       SWOOLE_MAX_REQUESTS:  ${SWOOLE_MAX_REQUESTS:-500}
       SWOOLE_TASK_WORKERS: ${SWOOLE_TASK_WORKERS:-auto}
       SWOOLE_WATCH: ${SWOOLE_WATCH:-false}
@@ -26,11 +29,17 @@ services:
       SWOOLE_PORT: ${SWOOLE_PORT:-8000}
       XDEBUG_MODE: 'off'
       XDEBUG_CONFIG: 'client_host=host.docker.internal'
+      TZ: "${APP_TIMEZONE:-Europe/London}"
+      LANG: "${APP_ENCODE:-en_GB}"
     volumes:
+      - /etc/timezone:/etc/timezone:ro
+      # - /etc/localtime:/etc/localtime:ro
+      - /etc/default/locale:/etc/default/locale:ro
+      - /etc/locale.gen:/etc/locale.gen:ro
       - ./laravel:/var/www
       - ./php/php-ini-overrides.ini:/usr/local/etc/php/php.ini
     networks:
-      - containernet
+      - DOCKER_BRIDGE
     depends_on:
       - redis
       - websocket
@@ -55,7 +64,7 @@ services:
       - ./laravel:/var/www
       - ./php/php-ini-overrides.ini:/usr/local/etc/php/php.ini
     networks:
-      - containernet
+      - DOCKER_BRIDGE
     depends_on:
       - laravel
 
@@ -66,18 +75,31 @@ services:
       context: .
       dockerfile: ./laravel/Dockerfile
       args:
-        APP_ENV: ${APP_ENV:-local}
+        APP_ENV: "${APP_ENV:-local}"
+        APP_USER: "${APP_USER:-laravel}"
+        APP_USER_UUID: ${APP_USER_UUID:-1000}
+        APP_USER_GUID: ${APP_USER_GUID:-1000}
+        TZ: "${APP_TIMEZONE:-Europe/London}"
+        LANG: "${APP_ENCODE:-en_GB}"
     working_dir: /var/www
     env_file: ./.env
     environment:
-      CONTAINER_ROLE: 'queue'
+      CONTAINER_ROLE: "queue"
+      APP_ENV: "${APP_ENV:-local}"
+      APP_USER: "${APP_USER:-laravel}"
       XDEBUG_MODE: 'off'
       XDEBUG_CONFIG: 'client_host=host.docker.internal'
+      TZ: "${APP_TIMEZONE:-Europe/London}"
+      LANG: "${APP_ENCODE:-en_GB}"
     volumes:
+      - /etc/timezone:/etc/timezone:ro
+      # - /etc/localtime:/etc/localtime:ro
+      - /etc/default/locale:/etc/default/locale:ro
+      - /etc/locale.gen:/etc/locale.gen:ro
       - ./laravel:/var/www
       - ./php/php-ini-overrides.ini:/usr/local/etc/php/php.ini
     networks:
-      - containernet
+      - DOCKER_BRIDGE
     depends_on:
       - laravel
 
@@ -88,18 +110,31 @@ services:
       context: .
       dockerfile: ./laravel/Dockerfile
       args:
-        APP_ENV: ${APP_ENV:-local}
+        APP_ENV: "${APP_ENV:-local}"
+        APP_USER: "${APP_USER:-laravel}"
+        APP_USER_UUID: ${APP_USER_UUID:-1000}
+        APP_USER_GUID: ${APP_USER_GUID:-1000}
+        TZ: "${APP_TIMEZONE:-Europe/London}"
+        LANG: "${APP_ENCODE:-en_GB}"
     working_dir: /var/www
     env_file: ./.env
     environment:
       CONTAINER_ROLE: 'queue_high'
+      APP_ENV: "${APP_ENV:-local}"
+      APP_USER: "${APP_USER:-laravel}"
       XDEBUG_MODE: 'off'
       XDEBUG_CONFIG: 'client_host=host.docker.internal'
+      TZ: "${APP_TIMEZONE:-Europe/London}"
+      LANG: "${APP_ENCODE:-en_GB}"
     volumes:
+      - /etc/timezone:/etc/timezone:ro
+      # - /etc/localtime:/etc/localtime:ro
+      - /etc/default/locale:/etc/default/locale:ro
+      - /etc/locale.gen:/etc/locale.gen:ro
       - ./laravel:/var/www
       - ./php/php-ini-overrides.ini:/usr/local/etc/php/php.ini
     networks:
-      - containernet
+      - DOCKER_BRIDGE
     depends_on:
       - laravel
 
@@ -115,9 +150,9 @@ services:
         APP_TIMEZONE: ${APP_TIMEZONE:-Europe/London}
         APP_ENCODE: ${APP_ENCODE:-en_GB}
     environment:
-      DEFAULT_APP_ID: app-id
-      DEFAULT_APP_KEY: app-key
-      DEFALT_APP_SECRET: app-secret
+      DEFAULT_APP_ID: ${PUSHER_APP_ID:-app-id}
+      DEFAULT_APP_KEY: ${PUSHER_APP_KEY:-app-key}
+      DEFALT_APP_SECRET: ${PUSHER_APP_SECRET:-app-secret}
       DEBUG: 'true'
       SOKETI_DEBUG: '1'
       METRICS_SERVER_PORT: '9601'
@@ -129,16 +164,13 @@ services:
       CORS_METHODS: "*"
       CORS_ORIGIN: "*"
       CORS_CREDENTIALS: "true"
-      TZ: ${APP_TIMEZONE:-Europe/London}
-      TZENCODE: ${APP_ENCODE:-en_GB}
-      LANG: ${APP_ENCODE:-en_GB}.UTF-8
-      LANGUAGE: ${APP_ENCODE:-en_GB}.UTF-8
-      LC_ALL: ${APP_ENCODE:-en_GB}.UTF-8
+      TZ: "${APP_TIMEZONE:-Europe/London}"
+      LANG: "${APP_ENCODE:-en_GB}"
     ports:
       - '${SOKETI_PORT:-6001}:6001'
       - '${SOKETI_METRICS_SERVER_PORT:-9601}:9601'
     networks:
-      - containernet
+      - DOCKER_BRIDGE
 
   nginx:
     image: xoren-io-nginx
@@ -149,22 +181,24 @@ services:
       context: .
       dockerfile: ./nginx/Dockerfile
       args:
-        APP_TIMEZONE: ${APP_TIMEZONE:-Europe/London}
-        APP_ENCODE: ${APP_ENCODE:-en_GB}
+        TZ: "${APP_TIMEZONE:-Europe/London}"
+        LANG: "${APP_ENCODE:-en_GB}"
     environment:
-      TZ: ${APP_TIMEZONE:-Europe/London}
-      TZENCODE: ${APP_ENCODE:-en_GB}
-      LANG: ${APP_ENCODE:-en_GB}.UTF-8
-      LANGUAGE: ${APP_ENCODE:-en_GB}.UTF-8
-      LC_ALL: ${APP_ENCODE:-en_GB}.UTF-8
+      TZ: "${APP_TIMEZONE:-Europe/London}"
+      LANG: "${APP_ENCODE:-en_GB}"
       SWOOLE_PORT: ${SWOOLE_PORT:-8000}
     volumes:
-      - ./laravel:/var/www
+      - /etc/timezone:/etc/timezone:ro
+      # - /etc/localtime:/etc/localtime:ro
+      - /etc/default/locale:/etc/default/locale:ro
+      - /etc/locale.gen:/etc/locale.gen:ro
+      - ./laravel/public:/var/www/public
+      - ./laravel/storage:/var/www/storage
     ports:
       - 80:80
       - 443:443
     networks:
-      - containernet
+      - DOCKER_BRIDGE
 
   mysql:
     image: xoren-io-mysql
@@ -175,29 +209,31 @@ services:
       dockerfile: Dockerfile
       args:
         MYSQL_VERSION: ${MYSQL_VERSION:-8}
-        APP_ENV: ${APP_ENV:-local}
-        APP_TIMEZONE: ${APP_TIMEZONE:-Europe/London}
-        APP_ENCODE: ${APP_ENCODE:-en_GB}
+        APP_ENV: "${APP_ENV:-local}"
+        TZ: "${APP_TIMEZONE:-Europe/London}"
+        LANG: "${LANG:-en_GB}"
     cap_add:
       - SYS_NICE
     ports:
       - "${FORWARD_DB_PORT:-3306}:3306"
     environment:
-      MYSQL_DATABASE: ${DB_DATABASE}
-      MYSQL_USER: ${DB_USERNAME:-laravel}
-      MYSQL_PASSWORD: ${DB_PASSWORD:-password}
-      MYSQL_ROOT_PASSWORD: ${DB_PASSWORD:-password}
+      MYSQL_DATABASE: "${DB_DATABASE:-laravel}"
+      MYSQL_USER: "${DB_USERNAME:-laravel}"
+      MYSQL_PASSWORD: "${DB_PASSWORD:-password}"
+      MYSQL_ROOT_PASSWORD: "${DB_PASSWORD:-password}"
       MYSQL_ROOT_HOST: '%'
       MYSQL_ALLOW_EMPTY_PASSWORD: ${MYSQL_ALLOW_EMPTY_PASSWORD:-1}
-      TZ: ${APP_TIMEZONE:-Europe/London}
-      TZENCODE: ${APP_ENCODE:-en_GB}
-      LANG: ${APP_ENCODE:-en_GB}.UTF-8
-      LANGUAGE: ${APP_ENCODE:-en_GB}.UTF-8
-      LC_ALL: ${APP_ENCODE:-en_GB}.UTF-8
+      INIT_ROCKSDB: ${INIT_ROCKSDB:-1}
+      TZ: "${APP_TIMEZONE:-Europe/London}"
+      LANG: "${APP_ENCODE:-en_GB}"
     volumes:
-      - 'mysqldata:/var/lib/mysql'
+      - /etc/timezone:/etc/timezone:ro
+      # - /etc/localtime:/etc/localtime:ro
+      - /etc/default/locale:/etc/default/locale:ro
+      - /etc/locale.gen:/etc/locale.gen:ro
+      - 'MYSQL_VOLUME:/var/lib/mysql'
     networks:
-      - containernet
+      - DOCKER_BRIDGE
     healthcheck:
       test: ["CMD", "mysqladmin", "ping", "-p${DB_PASSWORD}"]
       retries: 3
@@ -210,33 +246,37 @@ services:
       context: ./redis
       dockerfile: Dockerfile
       args:
-        APP_ENV: ${APP_ENV:-local}
-        APP_TIMEZONE: ${APP_TIMEZONE:-Europe/London}
-        APP_ENCODE: ${APP_ENCODE:-en_GB}
+        APP_ENV: "${APP_ENV:-local}"
+        TZ: "${APP_TIMEZONE:-Europe/London}"
+        LANG: "${LANG:-en_GB}"
     env_file: ./.env
     environment:
-      TZ: ${APP_TIMEZONE:-Europe/London}
-      TZENCODE: ${APP_ENCODE:-en_GB}
-      LANG: ${APP_ENCODE:-en_GB}.UTF-8
-      LANGUAGE: ${APP_ENCODE:-en_GB}.UTF-8
-      LC_ALL: ${APP_ENCODE:-en_GB}.UTF-8
+      TZ: "${APP_TIMEZONE:-Europe/London}"
+      LANG: "${APP_ENCODE:-en_GB}"
+    # # Add the sysctl setting
+    # sysctls:
+    #   - vm.overcommit_memory=1
     volumes:
-      - 'redisdata:/data'
+      - /etc/timezone:/etc/timezone:ro
+      # - /etc/localtime:/etc/localtime:ro
+      - /etc/default/locale:/etc/default/locale:ro
+      - /etc/locale.gen:/etc/locale.gen:ro
+      - 'REDIS_VOLUME:/data'
     ports:
       - '${FORWARD_REDIS_PORT:-6379}:6379'
     networks:
-      - containernet
+      - DOCKER_BRIDGE
     healthcheck:
       test: ["CMD", "redis-cli", "ping"]
       retries: 3
       timeout: 5s
 
 networks:
-  containernet:
+  DOCKER_BRIDGE:
     driver: bridge
 
 volumes:
-  mysqldata:
+  MYSQL_VOLUME:
     driver: local
-  redisdata:
+  REDIS_VOLUME:
     driver: local
