--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -48,9 +48,9 @@ services:
         APP_TIMEZONE: ${APP_TIMEZONE:-Europe/London}
         APP_ENCODE: ${APP_ENCODE:-en_GB}
     environment:
-      DEFAULT_APP_ID: app-id
-      DEFAULT_APP_KEY: app-key
-      DEFALT_APP_SECRET: app-secret
+      DEFAULT_APP_ID: ${PUSHER_APP_ID:-app-id}
+      DEFAULT_APP_KEY: ${PUSHER_APP_KEY:-app-key}
+      DEFALT_APP_SECRET: ${PUSHER_APP_SECRET:-app-secret}
       SOKETI_DEBUG: '1'
       METRICS_SERVER_PORT: '9601'
       DB_REDIS_HOST: redis
