--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,7 @@ services:
         APP_ENV: ${APP_ENV:-production}
         APP_USER: ${APP_USER:-laravel}
         APP_USER_UUID: ${APP_USER_UUID:-1000}
+        APP_USER_GUID: ${APP_USER_GUID:-1000}
         APP_TIMEZONE: ${APP_TIMEZONE:-Europe/London}
         APP_ENCODE: ${APP_ENCODE:-en_GB}
     working_dir: /var/www
@@ -23,14 +24,14 @@ services:
       SWOOLE_TASK_WORKERS: ${SWOOLE_TASK_WORKERS:-auto}
       SWOOLE_WATCH: ${SWOOLE_WATCH:-false}
       SWOOLE_WORKERS: ${SWOOLE_WORKERS:-auto}
-      SWOOLE_PORT: ${SWOOLE_PORT:-8000}
+      SWOOLE_PORT: ${SWOOLE_PORT:-9000}
       XDEBUG_MODE: 'off'
       XDEBUG_CONFIG: 'client_host=host.docker.internal'
     volumes:
       - ./laravel:/var/www
       - ./php/php-ini-overrides.ini:/usr/local/etc/php/php.ini
     networks:
-      - containernet
+      - DOCKER_BRIDGE
     depends_on:
       - redis
       - websocket
@@ -61,13 +62,10 @@ services:
       CORS_METHODS: "*"
       CORS_ORIGIN: "*"
       CORS_CREDENTIALS: "true"
-      TZ: ${APP_TIMEZONE:-Europe/London}
-      TZENCODE: ${APP_ENCODE:-en_GB}
-      LANG: ${APP_ENCODE:-en_GB}.UTF-8
-      LANGUAGE: ${APP_ENCODE:-en_GB}.UTF-8
-      LC_ALL: ${APP_ENCODE:-en_GB}.UTF-8
+      TZ: "${APP_TIMEZONE:-Europe/London}"
+      LANG: "${APP_ENCODE:-en_GB}"
     networks:
-        - containernet
+        - DOCKER_BRIDGE
     depends_on: 
       - redis
 
@@ -80,23 +78,28 @@ services:
       context: .
       dockerfile: ./nginx/Dockerfile
       args:
-        APP_TIMEZONE: ${APP_TIMEZONE:-Europe/London}
-        APP_ENCODE: ${APP_ENCODE:-en_GB}
+        TZ: "${APP_TIMEZONE:-Europe/London}"
+        LANG: "${APP_ENCODE:-en_GB}"
     environment:
-      TZ: ${APP_TIMEZONE:-Europe/London}
-      TZENCODE: ${APP_ENCODE:-en_GB}
-      LANG: ${APP_ENCODE:-en_GB}.UTF-8
-      LANGUAGE: ${APP_ENCODE:-en_GB}.UTF-8
-      LC_ALL: ${APP_ENCODE:-en_GB}.UTF-8
+      TZ: "${APP_TIMEZONE:-Europe/London}"
+      LANG: "${LANG:-en_GB}"
       SWOOLE_PORT: ${SWOOLE_PORT:-8000}
       NGINX_BLOCK_BOTS: 1
       NGINX_BLOCK_SCANNERS: 1
     volumes:
-      - ./laravel:/var/www
+      - /etc/timezone:/etc/timezone:ro
+      - /etc/localtime:/etc/localtime:ro
+      - /etc/default/locale:/etc/default/locale:ro
+      - /etc/locale.gen:/etc/locale.gen:ro
+      - ~/pems/dhparam.pem:/etc/nginx/dhparam.pem
+      - ~/pems/ssl-cert-snakeoil.key:/etc/ssl/private/ssl-cert-snakeoil.key
+      - ~/pems/ssl-cert-snakeoil.pem:/etc/ssl/certs/ssl-cert-snakeoil.pem
+      - ./laravel/public:/var/www/public
+      - ./laravel/storage:/var/www/storage
     ports:
       - 127.0.0.1:26680:80
     networks:
-      - containernet
+      - DOCKER_BRIDGE
 
   redis:
     image: xoren-io-redis
@@ -106,20 +109,21 @@ services:
       context: ./redis
       dockerfile: Dockerfile
       args:
-        APP_ENV: ${APP_ENV:-production}
-        APP_TIMEZONE: ${APP_TIMEZONE:-Europe/London}
-        APP_ENCODE: ${APP_ENCODE:-en_GB}
+        APP_ENV: "${APP_ENV:-production}"
+        TZ: "${APP_TIMEZONE:-Europe/London}"
+        LANG: "${APP_ENCODE:-en_GB}"
     env_file: ./.env
     environment:
-      TZ: ${APP_TIMEZONE:-Europe/London}
-      TZENCODE: ${APP_ENCODE:-en_GB}
-      LANG: ${APP_ENCODE:-en_GB}.UTF-8
-      LANGUAGE: ${APP_ENCODE:-en_GB}.UTF-8
-      LC_ALL: ${APP_ENCODE:-en_GB}.UTF-8
+      TZ: "${APP_TIMEZONE:-Europe/London}"
+      LANG: "${APP_ENCODE:-en_GB}"
     volumes:
-      - 'redisdata:/data' ## save in vm
+      - /etc/timezone:/etc/timezone:ro
+      - /etc/localtime:/etc/localtime:ro
+      - /etc/default/locale:/etc/default/locale:ro
+      - /etc/locale.gen:/etc/locale.gen:ro
+      - 'REDIS_VOLUME:/data' ## save in vm
     networks:
-      - containernet
+      - DOCKER_BRIDGE
     healthcheck:
         test: ["CMD", "redis-cli", "ping"]
         retries: 3
@@ -127,14 +131,9 @@ services:
 
 
 networks:
-  containernet:
+  DOCKER_BRIDGE:
     driver: bridge
 
-
 volumes:
-  redisdata:
-    driver: local
-  nginxconfigs:
-    driver: local
-  nginxconfigsopt:
+  REDIS_VOLUME:
     driver: local
