Disabled SWOOLE_WATCH in prod

--- a/.env.production
+++ b/.env.production
@@ -131,6 +131,6 @@ CF_PROJECT_ID="something"
 
 SWOOLE_MAX_REQUESTS=200
 SWOOLE_TASK_WORKERS=auto
-SWOOLE_WATCH=true
+SWOOLE_WATCH=false
 SWOOLE_WORKERS=auto
 SWOOLE_PORT=9000
