--- a/docker-compose.local.yml
+++ b/docker-compose.local.yml
@@ -15,7 +15,7 @@ services:
         TZ: "${APP_TIMEZONE:-Europe/London}"
         LANG: "${APP_ENCODE:-en_GB}"
     working_dir: /var/www
-    env_file: ./.env
+    env_file: ./.env.local
     environment:
       CONTAINER_ROLE: "laravel"
       APP_ENV: "${APP_ENV:-local}"
@@ -32,6 +32,7 @@ services:
       TZ: "${APP_TIMEZONE:-Europe/London}"
       LANG: "${APP_ENCODE:-en_GB}"
     volumes:
+      - /.env.local:/var/www/.env
       - /etc/timezone:/etc/timezone:ro
       # - /etc/localtime:/etc/localtime:ro
       - /etc/default/locale:/etc/default/locale:ro
@@ -55,12 +56,17 @@ services:
       args:
         APP_ENV: ${APP_ENV:-local}
     working_dir: /var/www
-    env_file: ./.env
+    env_file: ./.env.local
     environment:
       CONTAINER_ROLE: 'schedule'
       XDEBUG_MODE: 'off'
       XDEBUG_CONFIG: 'client_host=host.docker.internal'
     volumes:
+      - /.env.local:/var/www/.env
+      - /etc/timezone:/etc/timezone:ro
+      # - /etc/localtime:/etc/localtime:ro
+      - /etc/default/locale:/etc/default/locale:ro
+      - /etc/locale.gen:/etc/locale.gen:ro
       - ./laravel:/var/www
       - ./php/php-ini-overrides.ini:/usr/local/etc/php/php.ini
     networks:
@@ -82,7 +88,7 @@ services:
         TZ: "${APP_TIMEZONE:-Europe/London}"
         LANG: "${APP_ENCODE:-en_GB}"
     working_dir: /var/www
-    env_file: ./.env
+    env_file: ./.env.local
     environment:
       CONTAINER_ROLE: "queue"
       APP_ENV: "${APP_ENV:-local}"
@@ -92,6 +98,7 @@ services:
       TZ: "${APP_TIMEZONE:-Europe/London}"
       LANG: "${APP_ENCODE:-en_GB}"
     volumes:
+      - /.env.local:/var/www/.env
       - /etc/timezone:/etc/timezone:ro
       # - /etc/localtime:/etc/localtime:ro
       - /etc/default/locale:/etc/default/locale:ro
@@ -117,7 +124,7 @@ services:
         TZ: "${APP_TIMEZONE:-Europe/London}"
         LANG: "${APP_ENCODE:-en_GB}"
     working_dir: /var/www
-    env_file: ./.env
+    env_file: ./.env.local
     environment:
       CONTAINER_ROLE: 'queue_high'
       APP_ENV: "${APP_ENV:-local}"
@@ -127,6 +134,7 @@ services:
       TZ: "${APP_TIMEZONE:-Europe/London}"
       LANG: "${APP_ENCODE:-en_GB}"
     volumes:
+      - /.env.local:/var/www/.env
       - /etc/timezone:/etc/timezone:ro
       # - /etc/localtime:/etc/localtime:ro
       - /etc/default/locale:/etc/default/locale:ro
@@ -141,7 +149,6 @@ services:
   websocket:
     image: xoren-io-websocket
     container_name: xoren-io-websocket-local
-    env_file: ./.env
     build:
       context: ./soketi
       dockerfile: Dockerfile
@@ -149,6 +156,7 @@ services:
         APP_ENV: ${APP_ENV:-local}
         APP_TIMEZONE: ${APP_TIMEZONE:-Europe/London}
         APP_ENCODE: ${APP_ENCODE:-en_GB}
+    env_file: ./.env.local
     environment:
       DEFAULT_APP_ID: ${PUSHER_APP_ID:-app-id}
       DEFAULT_APP_KEY: ${PUSHER_APP_KEY:-app-key}
@@ -176,7 +184,7 @@ services:
     image: xoren-io-nginx
     container_name: xoren-io-nginx-local
     working_dir: /var/www
-    env_file: ./.env
+    env_file: ./.env.local
     build:
       context: .
       dockerfile: ./nginx/Dockerfile
@@ -192,6 +200,9 @@ services:
       # - /etc/localtime:/etc/localtime:ro
       - /etc/default/locale:/etc/default/locale:ro
       - /etc/locale.gen:/etc/locale.gen:ro
+      - ~/pems/dhparam.pem:/etc/nginx/dhparam.pem
+      - ~/pems/ssl-cert-snakeoil.key:/etc/ssl/private/ssl-cert-snakeoil.key
+      - ~/pems/ssl-cert-snakeoil.pem:/etc/ssl/certs/ssl-cert-snakeoil.pem
       - ./laravel/public:/var/www/public
       - ./laravel/storage:/var/www/storage
     ports:
